--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "firebase-admin": "^11.0.1",
+    "firebase-functions": "^3.24.0",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
